--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -235,7 +235,7 @@
     "thanksforpayment":"Thanks for your payment",
     "wewillfindyouwasher":"Now we will find a closest washers to you",
     "payementdidn":"Payment didn't go through",
-    "checkorchange":"Please double check or change your payment method",
+    "checkorchange":"Please double check or change your\n payment method",
     "addaddresswi":"+ Add address",
     "lookingforwasher":"Looking for a washer...",
     "seatrelax":"Seat back and relax",
